Add Spring Framework and log@j2